--- a/APM.Client/index.html
+++ b/APM.Client/index.html
@@ -22,11 +22,14 @@
 
     <!-- Library Scripts -->
     <script src="scripts/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-resource.js"></script>
 
     <!-- Application Script -->
     <script src="app/app.js"></script>
 
     <!-- Services -->
+    <script src="app/common/common.service.js"></script>
+    <script src="app/common/productResource.js"></script>
     <!-- Product Controllers -->
     <script src="app/products/productListCtrl.js"></script>
 </body>
